crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@334.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select range_add_bounds(int4range(1, 17));"
---
SelectStmt@0..42
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..23 "range_add_bounds"
      Ascii40@23..24 "("
      FuncCall@24..39
        Ident@24..33 "int4range"
        Ascii40@33..34 "("
        AConst@34..35
          Iconst@34..35 "1"
        Ascii44@35..36 ","
        Whitespace@36..37 " "
        AConst@37..39
          Iconst@37..39 "17"
  Ascii41@39..40 ")"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

