crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@336.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create function rangetypes_sql(q anyrange, b anyarray, out c anyelement)\n  as $$ select upper($1) + $2[1] $$\n  language sql;"
---
CreateFunctionStmt@0..124
  Create@0..6 "create"
  Whitespace@6..7 " "
  Function@7..15 "function"
  Whitespace@15..16 " "
  Ident@16..30 "rangetypes_sql"
  Ascii40@30..31 "("
  FunctionParameter@31..41
    Ident@31..32 "q"
    Whitespace@32..33 " "
    TypeName@33..41
      Ident@33..41 "anyrange"
  Ascii44@41..42 ","
  Whitespace@42..43 " "
  FunctionParameter@43..53
    Ident@43..44 "b"
    Whitespace@44..45 " "
    TypeName@45..53
      Ident@45..53 "anyarray"
  Ascii44@53..54 ","
  Whitespace@54..55 " "
  FunctionParameter@55..71
    OutP@55..58 "out"
    Whitespace@58..59 " "
    Ident@59..60 "c"
    Whitespace@60..61 " "
    TypeName@61..71
      Ident@61..71 "anyelement"
  Ascii41@71..72 ")"
  Newline@72..73 "\n"
  Whitespace@73..75 "  "
  DefElem@75..108
    As@75..77 "as"
    Whitespace@77..78 " "
    List@78..108
      Sconst@78..108 "$$ select upper($1) + ..."
  Newline@108..109 "\n"
  Whitespace@109..111 "  "
  DefElem@111..123
    Language@111..119 "language"
    Whitespace@119..120 " "
    SqlP@120..123 "sql"
  Ascii59@123..124 ";"

