crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@34.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO numrange_test VALUES('[3,]');"
---
InsertStmt@0..41
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "numrange_test"
  Whitespace@25..26 " "
  SelectStmt@26..39
    Values@26..32 "VALUES"
    Ascii40@32..33 "("
    List@33..39
      AConst@33..39
        Sconst@33..39 "'[3,]'"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

