crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@346.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table i8r_array (f1 int, f2 int8range[]);"
---
CreateStmt@0..48
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "i8r_array"
  Whitespace@22..23 " "
  Ascii40@23..24 "("
  ColumnDef@24..30
    Ident@24..26 "f1"
    Whitespace@26..27 " "
    TypeName@27..30
      IntP@27..30 "int"
  Ascii44@30..31 ","
  Whitespace@31..32 " "
  ColumnDef@32..44
    Ident@32..34 "f2"
    Whitespace@34..35 " "
    TypeName@35..44
      Ident@35..44 "int8range"
  Ascii91@44..45 "["
  Ascii93@45..46 "]"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

