crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@347.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into i8r_array values (42, array[int8range(1,10), int8range(2,20)]);"
---
InsertStmt@0..75
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..21
    Ident@12..21 "i8r_array"
  Whitespace@21..22 " "
  SelectStmt@22..71
    Values@22..28 "values"
    Whitespace@28..29 " "
    Ascii40@29..30 "("
    List@30..71
      AConst@30..32
        Iconst@30..32 "42"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AArrayExpr@34..71
        Array@34..39 "array"
        Ascii91@39..40 "["
        FuncCall@40..54
          Ident@40..49 "int8range"
          Ascii40@49..50 "("
          AConst@50..51
            Iconst@50..51 "1"
          Ascii44@51..52 ","
          AConst@52..54
            Iconst@52..54 "10"
        Ascii41@54..55 ")"
        Ascii44@55..56 ","
        Whitespace@56..57 " "
        FuncCall@57..71
          Ident@57..66 "int8range"
          Ascii40@66..67 "("
          AConst@67..68
            Iconst@67..68 "2"
          Ascii44@68..69 ","
          AConst@69..71
            Iconst@69..71 "20"
  Ascii41@71..72 ")"
  Ascii93@72..73 "]"
  Ascii41@73..74 ")"
  Ascii59@74..75 ";"

