crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@35.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO numrange_test VALUES('[, 5)');"
---
InsertStmt@0..42
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "numrange_test"
  Whitespace@25..26 " "
  SelectStmt@26..40
    Values@26..32 "VALUES"
    Ascii40@32..33 "("
    List@33..40
      AConst@33..40
        Sconst@33..40 "'[, 5)'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

